--- a/user2.html
+++ b/user2.html
@@ -39,12 +39,12 @@
     <button onclick="sendMessage()">Send</button>
 
     <script>
-        const ws = new WebSocket('ws://localhost:8080'); 
+        const ws = new WebSocket('wss://wss.dekesandev.com'); 
         ws.onopen = () => {
             console.log('Connected to WebSocket server as User 2');
             appendMessage('<em>Connected as User 2</em>', 'left');
 
-            const joinMessage = { type: 'join', channel_id: 'slug-1', sender: '2' };
+            const joinMessage = { type: 'join', channel_id: 'person-672a902e39dfb-1730842670', sender: '133' };
             ws.send(JSON.stringify(joinMessage));
         };
 
@@ -82,7 +82,7 @@
             const message = messageInput.value;
 
             if (message.trim()) {
-                const data = { channel_id: 'slug-1', sender: '2', message, seed: 2 }; 
+                const data = { channel_id: 'person-672a902e39dfb-1730842670', sender: '133', message, seed: 2 }; 
                 ws.send(JSON.stringify(data));
                 messageInput.value = '';
             }
