--- a/user1.html
+++ b/user1.html
@@ -44,7 +44,7 @@
             console.log('Connected to WebSocket server as User 1');
             appendMessage('<em>Connected as User 1</em>', 'left');
 
-            const joinMessage = { type: 'join', channel_id: 'slug-2', sender: '' };
+            const joinMessage = { type: 'join', channel_id: 'person-672a94c980df8-1730843849', sender: '113' };
             ws.send(JSON.stringify(joinMessage));
         };
 
@@ -83,7 +83,7 @@
             const message = messageInput.value;
 
             if (message.trim()) {
-                const data = { channel_id: 'slug-1', sender: '1', message, seed: 1 };
+                const data = { channel_id: 'person-672a94c980df8-1730843849', sender: '113', message, seed: 1 };
                 ws.send(JSON.stringify(data));
                 messageInput.value = '';
             }
