--- a/noti.html
+++ b/noti.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <script>
-        const ws = new WebSocket('ws://localhost:8081');
+        const ws = new WebSocket('wss://noti.dekesandev.com');
 
         ws.onopen = () => {
             console.log('Connected to notification WebSocket');
