--- a/noti.html
+++ b/noti.html
@@ -3,32 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>User 69 </title>
 </head>
 <body>
+    <h1>User 69</h1>
+    <input type="text" id="message-input" placeholder="Type a message to admin">
+    <button onclick="sendMessageToAdmin()">Send to Admin</button>
+
     <script>
-    const ws = new WebSocket('wss://noti.dekesandev.com');
+        const ws = new WebSocket('wss://noti.dekesandev.com');
 
-    ws.onopen = () => {
-        console.log('Connected as User 69');
+        ws.onopen = () => {
+            console.log('Connected as User 69');
+            
+            // Register user 69
+            ws.send(JSON.stringify({
+                sessions: 'user',
+                usersId: '69'  
+            }));
+        };
 
-        ws.send(JSON.stringify({
-            sessions: 'user',
-            usersId: '69'  
-        }));
-    };
+        ws.onmessage = (event) => {
+            const response = JSON.parse(event.data);
+            if (response.success) {
+                console.log(`Message from ${response.from}:`, response.message);
+            }
+        };
 
-    ws.onmessage = (event) => {
-        const response = JSON.parse(event.data);
-        if (response.success) {
-            console.log('Received targeted notification data:', response.data);
+        ws.onclose = () => {
+            console.log('Disconnected from WebSocket');
+        };
+
+        function sendMessageToAdmin() {
+            const messageInput = document.getElementById("message-input");
+            const text = messageInput.value;
+
+            if (text.trim()) {
+                ws.send(JSON.stringify({
+                    usersId: '69',       
+                    targetUserId: 'admin', 
+                    text: text          
+                }));
+                console.log(`Sent message to admin: ${text}`);
+                messageInput.value = '';
+            }
         }
-    };
-
-    ws.onclose = () => {
-        console.log('Disconnected from WebSocket');
-    };
-
     </script>
 </body>
 </html>
