--- a/meg.html
+++ b/meg.html
@@ -7,12 +7,12 @@
 <body>
     <h1>WebSocket Client</h1>
     <script>
-        const userId = 1; // User ID for this client
+        const userId = 1; 
         const ws = new WebSocket('wss://order.dekesandev.com');
 
         ws.onopen = () => {
             console.log('Connected to WebSocket server');
-            ws.send(JSON.stringify({ userId })); // Register with the server
+            ws.send(JSON.stringify({ userId }));
                 sendMessage();
         };
 
@@ -34,8 +34,8 @@
         };
 
         function sendMessage() {
-            const targetUserId = 2; // Example: send message to user ID 2
-            const message = 'Test message from user 1';
+            const targetUserId = 187; 
+            const message = '{"type": "map", "lat": "13.7626688", "long": "100.6759882"}';
 
             ws.send(
                 JSON.stringify({
